fix: text overflow

--- a/src/app/modules/timer/modules/list/list.component.scss
+++ b/src/app/modules/timer/modules/list/list.component.scss
@@ -49,8 +49,9 @@ checkbox {
                     font-weight: 500;
 
                     &--text {
-                        max-width: 250px;
+                        max-width: 230px;
                         font-size: 1.2em;
+                        @include truncate;
                     }
                 }
 
