--- a/src/app/modules/timer/modules/pomodoro/pomodoro.component.scss
+++ b/src/app/modules/timer/modules/pomodoro/pomodoro.component.scss
@@ -20,6 +20,7 @@ section {
     background-color: $surface-secondary;
     padding: 2rem 1rem;
     position: relative;
+    max-width: 500px;
 
     display: flex;
     flex-direction: column;
@@ -114,13 +115,17 @@ section {
         justify-items: center;
         color: $text-primary;
         gap: 16px;
+        height: auto;
+        max-height: 300px;
 
         h3 {
+            @include truncate;
+            margin: 0;
+            max-width: 300px;
             grid-area: title;
             place-content: center;
             font-size: 2em;
-            height: auto;
-            margin: 0;
+            text-align: center;
         }
 
         .editButton {
